--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "dateformat": "^5.0.3",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-background-timer": "2.4.1",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-logs": "5.1.0",
-    "react-native-sound": "0.11.2"
+    "react-native-paper": "5.12.3",
+    "react-native-paper-dates": "^0.22.12",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-sound": "0.11.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
