--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "dateformat": "^5.0.3",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-background-timer": "2.4.1",
@@ -21,9 +22,10 @@
     "react-native-paper": "5.12.3",
     "react-native-paper-dates": "^0.22.12",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
