--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "dateformat": "^5.0.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
