--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.12.3",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-background-actions": "4.0.1",
     "react-native-background-timer": "2.4.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-logs": "5.1.0",
