--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-background-timer": "2.4.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-logs": "5.1.0",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-paper": "5.12.3",
     "react-native-paper-dates": "^0.22.12",
     "react-native-paper-dropdown": "^1.0.7",
