--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.1.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.6",
@@ -34,6 +34,8 @@
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
