--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-background-actions": "4.0.1",
     "react-native-background-timer": "2.4.1",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-logs": "5.1.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-textinput": "^1.1.6",
