--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.0",
+    "@expo-google-fonts/rajdhani": "^0.2.3",
     "@expo/vector-icons": "^14.0.3",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
@@ -46,7 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.25.7",
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
