--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-paper-dates": "^0.22.12",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.34.0",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "12.1.1",
