updated package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NRGFrontend",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,45 +10,45 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.0",
-    "@expo-google-fonts/rajdhani": "^0.2.3",
-    "@expo/vector-icons": "^14.0.3",
-    "@notifee/react-native": "^7.8.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "@reduxjs/toolkit": "^2.2.6",
-    "axios": "^1.7.2",
-    "dateformat": "^5.0.3",
-    "native-base": "^3.4.28",
-    "qs": "^6.12.3",
-    "react": "18.2.0",
+    "@babel/runtime": "7.20.0",
+    "@expo-google-fonts/rajdhani": "0.2.3",
+    "@expo/vector-icons": "14.0.3",
+    "@notifee/react-native": "7.8.2",
+    "@react-native-async-storage/async-storage": "2.0.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/stack": "6.3.29",
+    "@reduxjs/toolkit": "2.2.6",
+    "axios": "1.7.2",
+    "dateformat": "5.0.3",
+    "native-base": "3.4.28",
+    "qs": "6.12.3",
+    "react": "18.3.1",
     "react-native": "0.74.2",
     "react-native-background-actions": "4.0.1",
     "react-native-background-timer": "2.4.1",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-gesture-handler": "2.17.1",
+    "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-logs": "5.1.0",
-    "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-otp-textinput": "^1.1.6",
+    "react-native-modal-datetime-picker": "18.0.0",
+    "react-native-otp-textinput": "1.1.6",
     "react-native-paper": "5.12.3",
-    "react-native-paper-dates": "^0.22.12",
-    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-paper-dates": "0.22.12",
+    "react-native-paper-dropdown": "1.0.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-sound": "0.11.2",
-    "react-native-splash-screen": "^3.3.0",
+    "react-native-splash-screen": "3.3.0",
     "react-native-svg": "12.1.1",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-native-ui-datepicker": "^2.0.3",
-    "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "react-native-svg-transformer": "1.5.0",
+    "react-native-ui-datepicker": "2.0.3",
+    "react-native-vector-icons": "10.1.0",
+    "react-redux": "9.1.2",
+    "redux": "5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.25.7",
+    "@babel/core": "7.20.2",
+    "@babel/preset-env": "7.20.2",
+    "@babel/runtime": "7.25.7",
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
@@ -64,6 +64,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "yarn@3.6.4"
+  }
 }
